--- a/quantitative/package.json
+++ b/quantitative/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "default-template",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.4.1"
-  },
-  "dependencies": {
-    "d3": "^7.9.0"
-  }
+	"name": "default-template",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"vite": "^5.4.1"
+	},
+	"dependencies": {
+		"d3": "^7.9.0",
+		"masonry-layout": "^4.2.2"
+	}
 }
